# SimpleOpenCLSamples

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
layers/: CMakeLists.txt  README.md
layers/00_example/: CMakeLists.txt  README.md  main.cpp
layers/10_cmdbufemu/: CMakeLists.txt  README.md  emulate.cpp  emulate.h  main.cpp
layers/11_semaemu/: CMakeLists.txt  README.md  emulate.cpp  emulate.h  main.cpp
layers/12_hosttaskemu/: CMakeLists.txt  emulate.cpp  emulate.h  main.cpp
layers/12_nvsgemu/: CMakeLists.txt  emulate.cpp  emulate.h  main.cpp  subgroups.cl.h
layers/12_spirvqueriesemu/: CMakeLists.txt  emulate.cpp  emulate.h  main.cpp
layers/20_apistats/: CMakeLists.txt  README.md  dispatch.h  main.cpp  scope_profiler.h
layers/20_nvsgemu/: CMakeLists.txt  emulate.cpp  emulate.h  main.cpp
layers/21_sgrotateemu/: CMakeLists.txt  emulate.cpp  emulate.h  main.cpp  sgrotate.cl.h
layers/99_svmplusplus/: CMakeLists.txt  emulate.cpp  emulate.h  main.cpp
libOpenCLHybrid/: CMakeLists.txt  README.md
libOpenCLHybrid/scripts/: gen_hybrid_loader_mako.py  loader.cpp.mako
libOpenCLHybrid/src/: loader.cpp
libOpenCLStatic/: CMakeLists.txt  LICENSE  README.md
libOpenCLStatic/scripts/: gen_loader_cpp_mako.py  loader.cpp.mako
libOpenCLStatic/src/: loader.cpp
samples/: CMakeLists.txt
samples/00_enumopencl/: CMakeLists.txt  main.cpp
samples/00_enumopenclpp/: CMakeLists.txt  README.md  main.cpp
samples/00_enumqueuefamilies/: CMakeLists.txt  README.md  main.cpp
samples/00_extendeddevicequeries/: CMakeLists.txt  README.md  main.cpp
samples/00_loaderinfo/: CMakeLists.txt  main.cpp
samples/00_loadershutdown/: CMakeLists.txt  main.cpp
samples/00_newqueries/: CMakeLists.txt  README.md  main.cpp
samples/00_newqueriespp/: CMakeLists.txt  README.md  main.cpp
samples/00_spirvqueries/: CMakeLists.txt  main.cpp
samples/00_suggestedlocalworksize/: CMakeLists.txt  main.cpp
samples/01_copybuffer/: CMakeLists.txt  README.md  main.cpp
samples/01_helloopencl/: CMakeLists.txt  hello.cl  main.cpp
samples/02_copybufferkernel/: CMakeLists.txt  README.md  main.cpp
samples/02_emptykernel/: CMakeLists.txt  main.cpp
samples/03_mandelbrot/: CMakeLists.txt  README.md  bmp.hpp  main.cpp
samples/04_julia/: CMakeLists.txt  README.md  bmp.hpp  main.cpp
samples/04_sobel/: CMakeLists.txt  README.md  main.cpp
samples/05_kernelfromfile/: CMakeLists.txt  README.md  main.cpp  sample_kernel.cl
samples/05_spirvkernelfromfile/: CMakeLists.txt  README.md  main.cpp  sample_kernel32.spv  sample_kernel64.spv
samples/06_ndrangekernelfromfile/: CMakeLists.txt  README.md  main.cpp
samples/10_queueexperiments/: CMakeLists.txt  README.md  main.cpp
samples/11_apitimes/: CMakeLists.txt  main.cpp
samples/11_semaphores/: CMakeLists.txt  README.md  main.cpp
samples/12_commandbuffers/: CMakeLists.txt  README.md  main.cpp
samples/12_commandbufferspp/: CMakeLists.txt  main.cpp
samples/13_mutablecommandbuffers/: CMakeLists.txt  README.md  main.cpp
samples/14_ooqcommandbuffers/: CMakeLists.txt  README.md  main.cpp
samples/15_mutablecommandbufferasserts/: CMakeLists.txt  README.md  main.cpp
samples/16_floatatomics/: CMakeLists.txt  README.md  main.cpp
samples/17_bf16conversions/: CMakeLists.txt  main.cpp
samples/17_bufferdeviceaddress/: CMakeLists.txt  main.cpp
samples/17_concurrentdispatch/: CMakeLists.txt  main.cpp
samples/17_relaxedallocations/: CMakeLists.txt  README.md  main.cpp
samples/20_matrixexperiments-bf16/: CMakeLists.txt  README.md  main.cpp  matrix_helpers_bf16.cl  matrix_kernel_tiled_bf16.cl  matrix_kernels_bf16.cl
samples/20_matrixexperiments-i8/: CMakeLists.txt  README.md  main.cpp  matrix_helpers_i8.cl  matrix_kernels_i8.cl
samples/20_matrixexperiments-tf32/: CMakeLists.txt  README.md  main.cpp  matrix_helpers_tf32.cl  matrix_kernel_tiled_tf32.cl  matrix_kernels_tf32.cl
samples/21_multithreading/: CMakeLists.txt  README.md  main.cpp
samples/99_aluperf/: CMakeLists.txt  main.cpp
samples/99_atomictest/: CMakeLists.txt  atomic_kernel.cl  main.cpp
samples/99_attentionexperiments/: CMakeLists.txt  attention_kernels.cl  main.cpp
samples/99_barriers/: CMakeLists.txt  main.cpp
samples/99_blockreads/: CMakeLists.txt  block_read_kernel.cl  main.cpp
samples/99_cyclecounter/: CMakeLists.txt  main.cpp
samples/99_flashattention/: CMakeLists.txt  flashattention_kernels.cl  main.cpp  notes.txt
samples/99_forumkernelname/: CMakeLists.txt  window_level.spv  window_level_test.cpp
samples/99_globalmemquery/: CMakeLists.txt  main.cpp
samples/99_globalvar/: CMakeLists.txt  device_global64.spv  device_global64.spvasm  main.cpp  to_spv.sh
samples/99_hosttask/: CMakeLists.txt  main.cpp
samples/99_largeenqueue/: CMakeLists.txt  largeenqueue_kernel.cl  main.cpp
samples/99_linkprogramerror/: CMakeLists.txt  main.cpp
samples/99_loaderinfo/: main.cpp
samples/99_loaderunload/: CMakeLists.txt  main.cpp
samples/99_localmemquery/: CMakeLists.txt  main.cpp
samples/99_mapexperiments/: CMakeLists.txt  main.cpp
samples/99_mapunmap/: CMakeLists.txt  main.cpp
samples/99_matrixexperiments/: CMakeLists.txt  main.cpp  matrix_helpers.cl  matrix_kernel_tiled.cl  matrix_kernels.cl
samples/99_matrixexperimentsi8/: CMakeLists.txt  main.cpp  matrix_helpers_i8.cl  matrix_kernel_tiled_i8.cl  matrix_kernels_i8.cl
samples/99_matrixexperimentstf32/: CMakeLists.txt  main.cpp  matrix_helpers_tf32.cl  matrix_kernel_tiled_tf32.cl  matrix_kernels_tf32.cl
samples/99_mmpeak/: CMakeLists.txt  main.cpp
samples/99_overlapmem/: CMakeLists.txt  main.cpp
samples/99_pingpong/: CMakeLists.txt  main.cpp
samples/99_pipeline/: CMakeLists.txt  iterate.sh  iterate_uncached.sh  iterate_unique.sh  main.cpp
samples/99_pipeline2d/: CMakeLists.txt  iterate.sh  iterate_uncached.sh  main.cpp
samples/99_pipeline2dimg/: CMakeLists.txt  iterate.sh  main.cpp
samples/99_profbench/: CMakeLists.txt  main.cpp
samples/99_queueexperiments/: CMakeLists.txt  main.cpp
samples/99_ruhptester/: CMakeLists.txt  (+1 more)
tutorials/: CMakeLists.txt
(+227 files in other folders)
